crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__definition-list.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
Term
:   Definition, indented continuation lines aligned.

    Second paragraph of the definition.
:   Second definition.

Other
:   Its definition.
