crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__diag-include-missing.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
---
press:
  sources:
    crossrefs: {fwrev: build/fw.refs.json}
---

--8<-- "chapters/boot.md"

See @fwrev:fw:x.
