crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__diag-label-duplicate.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
## A {#sec:a}

## B {#sec:a}
