crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__diag-prefix.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
{counter}(rq:one) A requirement with an undeclared series.

![Trace](trace.png){#tbl:trace}
