crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__diag-ref-ambiguous.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
---
press:
  sources:
    bibliography:
      stock: {type: misc, title: Stock}
---

[This claim]{#stock} is cited as @stock.
