crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__diag-ref-unresolved.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
## Intro {#sec:intro}

See @sec:intro, @Sec:intro and [the intro](#sec:intro), but not @sec:nope.
