crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__diag-table-align.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
```yaml table
columns: [A, {name: B, align: middle}]
rows:
  - [1, 2]
```
