crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__diag-table-column-unknown.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
```yaml table
columns:
  - Year
  - {name: Actual, columns: [H1, H2]}
rows:
  - 2024: {Acutal: [6, 7]}
```
