crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__diag-table-columns.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
```yaml table
columns: [A]
rows:
  - [1]
```
