crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__diag-table-placement.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
```yaml table
table:
  placement: xyz
columns:
  - A
  - B
rows:
  - [1, 2]
```
